Intigrated NGRX Statemagement to the books collecion.
Signed-off-by: Yogeshwar Puram <pyogeshwar@pkrmsezdc.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,9 @@
         routerLinkActive="active"
         routerLink="/cart"
       >
-        <mat-icon matBadge="{{ booksLength }}" matBadgeColor="warn"
+        <mat-icon
+          matBadge=" {{ cartItemsCount$ | async }} "
+          matBadgeColor="warn"
           >shopping_cart</mat-icon
         >Cart
       </mat-list-item>
