--- a/src/app/components/cart/mycart.component.html
+++ b/src/app/components/cart/mycart.component.html
@@ -1,7 +1,7 @@
-<div class="mycart_page">
-  <app-books [books]="books" [isDelete]="true"></app-books>
+<div class="mycart_page" *ngIf="cartBooks$ | async as cartBooks">
+  <app-books [books]="cartBooks"></app-books>
   <span class="proceedToBuy_Btn">
-    <button mat-raised-button color="warn" [routerLink]="['/billing']">
+    <button mat-raised-button color="warn" (click)="proceedToBuy(cartBooks)">
       Proceed to Buy
     </button>
   </span>
