--- a/src/app/components/order/myorders.component.html
+++ b/src/app/components/order/myorders.component.html
@@ -5,15 +5,17 @@
     </mat-card-header>
     <mat-card-content>
       <table>
-        <tr>
-          <th>Book(s): {{ books?.length }}</th>
-        </tr>
-        <tr *ngFor="let book of books; let i = index;; trackBy: trackByMethod">
+        <tr
+          *ngFor="
+            let book of orderedBooks$ | async;
+            let i = index;
+          "
+        >
           <td><strong>Title:</strong></td>
-          <td>{{ book?.volumeInfo['title'] }}</td>
+          <td>{{ book?.volumeInfo["title"] }}</td>
         </tr>
       </table>
-      <div class="user_details" *ngIf="user">
+      <div class="user_details" *ngIf="user$ | async as user">
         <span> <strong> Name </strong>: {{ user?.name }} </span>
         <span> <strong> Phone </strong>: {{ user?.phone }} </span>
         <span> <strong> email </strong>: {{ user?.email }} </span>
