--- a/src/app/components/order/myorders.component.html
+++ b/src/app/components/order/myorders.component.html
@@ -5,21 +5,16 @@
     </mat-card-header>
     <mat-card-content>
       <table>
-        <tr
-          *ngFor="
-            let book of orderedBooks$ | async;
-            let i = index;
-          "
-        >
+        <tr *ngFor="let book of orderedBooks$ | async; let i = index">
           <td><strong>Title:</strong></td>
           <td>{{ book?.volumeInfo["title"] }}</td>
         </tr>
       </table>
-      <div class="user_details" *ngIf="user$ | async as user">
-        <span> <strong> Name </strong>: {{ user?.name }} </span>
-        <span> <strong> Phone </strong>: {{ user?.phone }} </span>
-        <span> <strong> email </strong>: {{ user?.email }} </span>
-        <span> <strong> Address </strong>: {{ user?.address }} </span>
+      <div class="user_details" *ngFor="let u of user$ | async; let i = index">
+        <span> <strong> Name </strong>: {{ u?.name }} </span>
+        <span> <strong> Phone </strong>: {{ u?.phone }} </span>
+        <span> <strong> email </strong>: {{ u?.email }} </span>
+        <span> <strong> Address </strong>: {{ u?.address }} </span>
       </div>
     </mat-card-content>
   </mat-card>
